2005-04-14  John Levon  <levon@movementarian.org>

	* daemon/opd_interface.h:
	* daemon/opd_trans.c: remove legacy TRACE_END

	* daemon/liblegacy/opd_kernel.c:
	* daemon/liblegacy/opd_proc.c: avoid attributing "no mapping"
	  samples to vmlinux when using --no-vmlinux via a sick hack

2005-04-13  John Levon  <levon@movementarian.org>

	* libutil++/growable_vector.h: add fill()

	* libutil++/diff_container.cpp: use it

	* libpp/symbol_sort.cpp: code clean up

2005-04-13  John Levon  <levon@movementarian.org>

	* libpp/diff_container.h:
	* libpp/diff_container.cpp: syms doesn't need to be a member

2005-04-13  Nathan Tallent  <eraxxon@cs.rice.edu>

	* utils/opcontrol: fix unquoted variable references in 'test'
 	  expressions

2005-04-13  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/op_bfd.cpp: skip null-name section symbols

2005-04-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: fix double formating when value are
	  negative

2005-04-12  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp:
	* pp/opreport_options.cpp:
	* pp/common_option.cpp: verify diff profile classes match

2005-04-12  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in: document diff profiles

2005-04-12  John Levon  <levon@movementarian.org>

	* libpp/diff_container.cpp: fix duplicate syms in output

	* pp/opreport.cpp:
	* libpp/diff_container.h:
	* libpp/diff_container.cpp: implement thresholding etc.

2005-04-12  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/count_array.cpp:
	* libpp/count_array.h:
	* libpp/diff_container.cpp:
	* libpp/diff_container.h:
	* libpp/format_flags.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h:
	* libpp/symbol.h:
	* libpp/symbol_functors.cpp:
	* libpp/symbol_sort.cpp:
	* libpp/symbol_sort.h:
	* libutil++/Makefile.am:
	* libutil++/growable_vector.h: